--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,5 +1,5 @@
-NAME := ex01
-SRCS := ScavTrap.cpp ClapTrap.cpp main.cpp
+NAME := ex02
+SRCS := FragTrap.cpp ScavTrap.cpp ClapTrap.cpp main.cpp
 OBJS = $(SRCS:.cpp=.o)
 CC = c++ -Wall -Wextra -Werror -std=c++98 #-fsanitize=address,undefined -fno-omit-frame-pointer -g -O0
 RM = rm -f
